[tool.poetry]
name = "warden"
version = "0.1.0"
authors = []
description = "FastAPI middleware for receiving and validating quantum jobs"
readme = "README.md"
packages = [{ include = "warden" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = { extras = ["standard"], version = "^0.40.0" }
pydantic = "^2.6"
pydantic-settings = "^2.12.0"
alembic = "^1.17.2"
greenlet = "^3.3.0"
sqlalchemy = "^2.0.45"
aiosqlite = "^0.20"
httpx = "^0.28.1"

# Optional DBs
psycopg = { extras = ["binary"], version = "^3.3.2", optional = true }
asyncpg = { version = "^0.29", optional = true }
asyncmy = { version = "^0.2", optional = true }

[tool.poetry.extras]
postgres = ["asyncpg", "psycopg"]
mariadb = ["asyncmy"]


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.20"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
ruff = "^0.15.6"
pytest-httpx = "^0.36.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [
    "warden/alembic",
    "warden/alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501", # leave line-length enforcement to formatter
]

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
